# Sapiens-Pytorch-Inference

./: .gitignore  README.md  image_all_tasks.py  image_normal_estimation.py  image_pose_estimation.py  image_predictor.py  image_segmentation.py  onnx_export.py  pyproject.toml  requirements.txt  video_normal_estimation.py  video_predictor.py  video_segmentation.py  webcam_normal_estimation.py  webcam_predictor.py  webcam_segmentation.py
notebooks/: README.md
sapiens/: __init__.py  common.py  depth.py  detector.py  normal.py  predictor.py  segmentation.py
sapiens_inference/: common.py  detector.py  normal.py  pose.py  pose_classes_and_palettes.py  predictor.py
